--- a/src/output.css
+++ b/src/output.css
@@ -7,19 +7,10 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-500: oklch(0.637 0.237 25.331);
-    --color-red-600: oklch(0.577 0.245 27.325);
-    --color-red-700: oklch(0.505 0.213 27.518);
-    --color-amber-400: oklch(0.828 0.189 84.429);
-    --color-amber-600: oklch(0.666 0.179 58.318);
-    --color-amber-700: oklch(0.555 0.163 48.998);
-    --color-sky-700: oklch(0.5 0.134 242.749);
-    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
-    --text-7xl: 4.5rem;
-    --text-7xl--line-height: 1;
-    --text-9xl: 8rem;
-    --text-9xl--line-height: 1;
+    --font-weight-medium: 500;
+    --font-weight-bold: 700;
     --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -37,7 +28,11 @@
     --default-mono-font-variation-settings: var(
       --font-mono--font-variation-settings
     );
-    --spacing-mycontainer: 800px;
+    --color-primary: #5956E8;
+    --color-menuC: #181818;
+    --radius-10: 10px;
+    --spacing-headerContainer: 1170px;
+    --font-inter: "Inter", "sans-serif";
   }
 }
 @layer base {
@@ -238,12 +233,6 @@
   }
   .sticky {
     position: sticky;
-  }
-  .left-2 {
-    left: calc(var(--spacing) * 2);
-  }
-  .left-2\.5 {
-    left: calc(var(--spacing) * 2.5);
   }
   .isolate {
     isolation: isolate;
@@ -464,11 +453,29 @@
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
+  .w-\[15\%\] {
+    width: 15%;
+  }
+  .w-\[70\%\] {
+    width: 70%;
+  }
+  .w-\[100px\] {
+    width: 100px;
+  }
+  .w-\[522px\] {
+    width: 522px;
+  }
+  .w-\[542px\] {
+    width: 542px;
+  }
+  .w-\[600px\] {
+    width: 600px;
+  }
   .w-screen {
     width: 100vw;
   }
-  .max-w-mycontainer {
-    max-width: var(--spacing-mycontainer);
+  .max-w-headerContainer {
+    max-width: var(--spacing-headerContainer);
   }
   .max-w-none {
     max-width: none;
@@ -950,6 +957,9 @@
   .rounded {
     border-radius: 0.25rem;
   }
+  .rounded-10 {
+    border-radius: var(--radius-10);
+  }
   .rounded-s {
     border-start-start-radius: 0.25rem;
     border-end-start-radius: 0.25rem;
@@ -1067,26 +1077,14 @@
   .bg-\[\#0088cc\] {
     background-color: #0088cc;
   }
-  .bg-\[amber-600\] {
-    background-color: amber-600;
-  }
   .bg-\[color\:var\(--my-color\)\] {
     background-color: var(--my-color);
-  }
-  .bg-\[url\] {
-    background-color: url;
   }
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
   }
-  .bg-amber-600 {
-    background-color: var(--color-amber-600);
-  }
-  .bg-amber-700 {
-    background-color: var(--color-amber-700);
-  }
-  .bg-black {
-    background-color: var(--color-black);
+  .bg-primary {
+    background-color: var(--color-primary);
   }
   .bg-red-500 {
     background-color: var(--color-red-500);
@@ -1096,6 +1094,9 @@
   }
   .bg-red-500\/\[50\%\] {
     background-color: color-mix(in oklab, var(--color-red-500) 50%, transparent);
+  }
+  .bg-white {
+    background-color: var(--color-white);
   }
   .-bg-conic {
     --tw-gradient-position: in oklab;
@@ -1108,57 +1109,6 @@
   .bg-radial {
     --tw-gradient-position: in oklab;
     background-image: radial-gradient(var(--tw-gradient-stops));
-  }
-  .bg-\[url\(\)\] {
-    background-image: url();
-  }
-  .bg-\[url\(\.\.\)\] {
-    background-image: url(..);
-  }
-  .bg-\[url\(\.\.\/\)\] {
-    background-image: url(../);
-  }
-  .bg-\[url\(\.\.\/Images\/gallery-01\.jpg\)\] {
-    background-image: url(../Images/gallery-01.jpg);
-  }
-  .bg-\[url\(\.\.Images\/gallery-01\.jpg\)\] {
-    background-image: url(..Images/gallery-01.jpg);
-  }
-  .bg-\[url\(I\)\] {
-    background-image: url(I);
-  }
-  .bg-\[url\(Ima\)\] {
-    background-image: url(Ima);
-  }
-  .bg-\[url\(Images\)\] {
-    background-image: url(Images);
-  }
-  .bg-\[url\(Images\/\)\] {
-    background-image: url(Images/);
-  }
-  .bg-\[url\(Images\/ga\)\] {
-    background-image: url(Images/ga);
-  }
-  .bg-\[url\(Images\/gall\)\] {
-    background-image: url(Images/gall);
-  }
-  .bg-\[url\(Images\/gallery\)\] {
-    background-image: url(Images/gallery);
-  }
-  .bg-\[url\(Images\/gallery-\)\] {
-    background-image: url(Images/gallery-);
-  }
-  .bg-\[url\(Images\/gallery-0\)\] {
-    background-image: url(Images/gallery-0);
-  }
-  .bg-\[url\(Images\/gallery-01\)\] {
-    background-image: url(Images/gallery-01);
-  }
-  .bg-\[url\(Images\/gallery-01\.jpg\)\] {
-    background-image: url(Images/gallery-01.jpg);
-  }
-  .bg-\[url\(i\)\] {
-    background-image: url(i);
   }
   .bg-none {
     background-image: none;
@@ -1314,17 +1264,32 @@
   .object-top {
     object-position: top;
   }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-\[35\] {
-    padding-block: 35;
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
   }
-  .py-\[300px\] {
-    padding-block: 300px;
+  .py-8 {
+    padding-block: calc(var(--spacing) * 8);
   }
-  .py-\[350px\] {
-    padding-block: 350px;
+  .pt-8 {
+    padding-top: calc(var(--spacing) * 8);
+  }
+  .pt-\[2\] {
+    padding-top: 2;
+  }
+  .pt-\[245px\] {
+    padding-top: 245px;
+  }
+  .pb-9 {
+    padding-bottom: calc(var(--spacing) * 9);
+  }
+  .pb-\[175px\] {
+    padding-bottom: 175px;
   }
   .text-center {
     text-align: center;
@@ -1368,21 +1333,40 @@
   .align-top {
     vertical-align: top;
   }
-  .text-7xl {
-    font-size: var(--text-7xl);
-    line-height: var(--tw-leading, var(--text-7xl--line-height));
+  .font-inter {
+    font-family: var(--font-inter);
   }
-  .text-9xl {
-    font-size: var(--text-9xl);
-    line-height: var(--tw-leading, var(--text-9xl--line-height));
+  .text-\[16px\] {
+    font-size: 16px;
+  }
+  .text-\[18px\] {
+    font-size: 18px;
+  }
+  .text-\[25px\] {
+    font-size: 25px;
+  }
+  .text-\[65px\] {
+    font-size: 65px;
   }
   .leading-7 {
     --tw-leading: calc(var(--spacing) * 7);
     line-height: calc(var(--spacing) * 7);
   }
+  .leading-\[80px\] {
+    --tw-leading: 80px;
+    line-height: 80px;
+  }
   .leading-none {
     --tw-leading: 1;
     line-height: 1;
+  }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+  }
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
   }
   .text-balance {
     text-wrap: balance;
@@ -1456,6 +1440,12 @@
   }
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
+  }
+  .text-menuC {
+    color: var(--color-menuC);
+  }
+  .text-primary {
+    color: var(--color-primary);
   }
   .text-white {
     color: var(--color-white);
@@ -1604,12 +1594,6 @@
   }
   .scheme-only-light {
     color-scheme: only light;
-  }
-  .opacity-65 {
-    opacity: 65%;
-  }
-  .opacity-75 {
-    opacity: 75%;
   }
   .mix-blend-plus-darker {
     mix-blend-mode: plus-darker;
@@ -1904,165 +1888,10 @@
   .transform-view {
     transform-box: view-box;
   }
-  .before\:absolute {
-    &::before {
-      content: var(--tw-content);
-      position: absolute;
-    }
-  }
-  .before\:top-0 {
-    &::before {
-      content: var(--tw-content);
-      top: calc(var(--spacing) * 0);
-    }
-  }
-  .before\:top-0\.5 {
-    &::before {
-      content: var(--tw-content);
-      top: calc(var(--spacing) * 0.5);
-    }
-  }
-  .before\:left-0 {
-    &::before {
-      content: var(--tw-content);
-      left: calc(var(--spacing) * 0);
-    }
-  }
-  .before\:left-2\.5 {
-    &::before {
-      content: var(--tw-content);
-      left: calc(var(--spacing) * 2.5);
-    }
-  }
-  .before\:h-\[8px\] {
-    &::before {
-      content: var(--tw-content);
-      height: 8px;
-    }
-  }
-  .before\:w-\[50px\] {
-    &::before {
-      content: var(--tw-content);
-      width: 50px;
-    }
-  }
-  .before\:bg-red-600 {
-    &::before {
-      content: var(--tw-content);
-      background-color: var(--color-red-600);
-    }
-  }
-  .before\:bg-white {
-    &::before {
-      content: var(--tw-content);
-      background-color: var(--color-white);
-    }
-  }
-  .before\:content-\[\"\"\] {
-    &::before {
-      content: var(--tw-content);
-      --tw-content: "";
-      content: var(--tw-content);
-    }
-  }
-  .before\:content-\[\'\'\] {
-    &::before {
-      content: var(--tw-content);
-      --tw-content: '';
-      content: var(--tw-content);
-    }
-  }
-  .after\:absolute {
-    &::after {
-      content: var(--tw-content);
-      position: absolute;
-    }
-  }
-  .after\:top-0 {
-    &::after {
-      content: var(--tw-content);
-      top: calc(var(--spacing) * 0);
-    }
-  }
-  .after\:right-0 {
-    &::after {
-      content: var(--tw-content);
-      right: calc(var(--spacing) * 0);
-    }
-  }
-  .after\:bottom-0 {
-    &::after {
-      content: var(--tw-content);
-      bottom: calc(var(--spacing) * 0);
-    }
-  }
-  .after\:bottom-0\.5 {
-    &::after {
-      content: var(--tw-content);
-      bottom: calc(var(--spacing) * 0.5);
-    }
-  }
-  .after\:bottom-1 {
-    &::after {
-      content: var(--tw-content);
-      bottom: calc(var(--spacing) * 1);
-    }
-  }
-  .after\:left-0 {
-    &::after {
-      content: var(--tw-content);
-      left: calc(var(--spacing) * 0);
-    }
-  }
-  .after\:h-\[8px\] {
-    &::after {
-      content: var(--tw-content);
-      height: 8px;
-    }
-  }
-  .after\:w-\[50px\] {
-    &::after {
-      content: var(--tw-content);
-      width: 50px;
-    }
-  }
-  .after\:bg-amber-400 {
-    &::after {
-      content: var(--tw-content);
-      background-color: var(--color-amber-400);
-    }
-  }
-  .after\:bg-red-700 {
-    &::after {
-      content: var(--tw-content);
-      background-color: var(--color-red-700);
-    }
-  }
-  .after\:bg-white {
-    &::after {
-      content: var(--tw-content);
-      background-color: var(--color-white);
-    }
-  }
-  .\*\:after\:absolute {
-    :is(& > *) {
-      &::after {
-        content: var(--tw-content);
-        position: absolute;
-      }
-    }
-  }
-  .hover\:bg-sky-700 {
+  .hover\:text-primary {
     &:hover {
       @media (hover: hover) {
-        background-color: var(--color-sky-700);
-      }
-    }
-  }
-  .hover\:text-sky-700 {
-    &:hover {
-      @media (hover: hover) {
-        color: var(--color-sky-700);
+        color: var(--color-primary);
       }
     }
   }
@@ -2165,6 +1994,10 @@
   initial-value: 0;
 }
 @property --tw-leading {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-font-weight {
   syntax: "*";
   inherits: false;
 }
@@ -2346,10 +2179,5 @@
 }
 @property --tw-duration {
   syntax: "*";
-  inherits: false;
-}
-@property --tw-content {
-  syntax: "*";
-  initial-value: "";
   inherits: false;
 }
